--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
       <version>4.0.1</version> <!-- Adjust the version based on your needs -->
       <scope>provided</scope>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations-java5</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
 
   </dependencies>
   <build>
