--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
           <version>RELEASE</version>
           <scope>compile</scope>
       </dependency>
+      <dependency>
+          <groupId>org.apache.ivy</groupId>
+          <artifactId>ivy</artifactId>
+          <version>2.5.0</version>
+      </dependency>
+
 
   </dependencies>
   <build>
