--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,15 @@
           <artifactId>ivy</artifactId>
           <version>2.5.0</version>
       </dependency>
+      <dependency>
 
+      <groupId>org.glassfish.web</groupId>
+
+      <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+
+      <version>1.2.6</version>
+
+  </dependency>
 
   </dependencies>
   <build>
